--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "s-circle-progress",
+  "name": "hc-circle-progress",
   "description": "Polymer-based web component displaying a circular progress bar.",
   "authors": [
     "The StartPolymer Project Authors (https://github.com/StartPolymer/authors)"
@@ -11,10 +11,10 @@
     "circle",
     "progress"
   ],
-  "main": "s-circle-progress.html",
+  "main": "hc-circle-progress.html",
   "repository": {
     "type": "git",
-    "url": "git://github.com/StartPolymer/s-circle-progress.git"
+    "url": "git://github.com/StartPolymer/hc-circle-progress.git"
   },
   "dependencies": {
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
